docs:  1.server文档相关
