# server/docs/swagger.json
@@ -693,7 +693,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Moment"
+                            "$ref": "#/definitions/model.AddMoment"
                         }
                     }
                 ],
@@ -701,7 +701,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Moment"
+                            "$ref": "#/definitions/model.AddMoment"
                         }
                     }
                 }
@@ -863,6 +863,36 @@
                 }
             }
         },
+        "model.AddMoment": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "自增id",
+                    "type": "integer"
+                },
+                "location": {
+                    "description": "UserUniqueId string `gorm:\"comment:用户唯一id;\" json:\"userUniqueId\"`",
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "description": "更新时间",
+                    "type": "string"
+                },
+                "urls": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.ChangePassword": {
             "type": "object",
             "required": [
@@ -1004,6 +1034,12 @@
                 "updatedAt": {
                     "description": "更新时间",
                     "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                },
+                "userInfo": {
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
@@ -1112,44 +1148,6 @@
                     "maxLength": 12,
                     "minLength": 4,
                     "example": "test"
-                }
-            }
-        },
-        "model.Moment": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "description": "创建时间",
-                    "type": "string"
-                },
-                "id": {
-                    "description": "自增id",
-                    "type": "integer"
-                },
-                "likes": {
-                    "type": "integer"
-                },
-                "location": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "description": "更新时间",
-                    "type": "string"
-                },
-                "urls": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "string"
-                },
-                "userInfo": {
-                    "$ref": "#/definitions/model.User"
-                },
-                "views": {
-                    "type": "integer"
                 }
             }
         },
